--- a/src/Components/ui/CentrEkspPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrEkspPage/Container1/Container1.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 593px;
 }
@@ -19,7 +20,7 @@
 }
 .containerLeft img:nth-of-type(2) {
   position: absolute;
-  width: 470px;
+  width: 320px;
   /* height: 457px; */
   left: 63px;
   bottom: 0;
@@ -59,7 +60,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
+  align-items: center;
+  width: 100%;
   gap: 27px;
   background-color: #fff;
   padding-left: 50px;
@@ -100,7 +102,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 993px;
+    height: 450px;
     margin: 0;
     /* outline: 1px solid red; */
   }
@@ -140,7 +142,7 @@
     top: 43px;
     font-size: 14px;
     font-weight: 700;
-      color: #fff;
+    color: #fff;
   }
 
   .containerLeft span:nth-of-type(2) {
@@ -151,7 +153,7 @@
     top: 87px;
     font-size: 12px;
     font-weight: 700;
-     color: #fff0.7;
+    color: #fff0.7;
   }
 
   .containerRight {
