--- a/src/Components/ui/CentrInnovPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrInnovPage/Container1/Container1.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 593px;
 }
@@ -20,7 +21,7 @@
 }
 .containerLeft img:nth-of-type(2) {
   position: absolute;
-  width: 350px;
+  width: 320px;
   /* height: 457px; */
   left: 63px;
   bottom: 0;
@@ -53,14 +54,15 @@
   top: 137px;
   font-size: 14px;
   font-weight: 500;
-  color: rgba(86, 34, 17, 0.50);
+  color: rgba(86, 34, 17, 0.5);
 }
 
 .containerRight {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
+  align-items: center;
+  width: 100%;
   gap: 27px;
   background-color: #fff;
   padding-left: 50px;
@@ -101,8 +103,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 993px;
+    height: 390px;
     margin: 0;
+    margin-bottom: 40px;
     /* outline: 1px solid red; */
   }
 
