--- a/src/Components/ui/CentrPredPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrPredPage/Container1/Container1.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 593px;
 }
@@ -19,7 +20,7 @@
 }
 .containerLeft img:nth-of-type(2) {
   position: absolute;
-  width: 280px;
+  width: 320px;
   /* height: 427px; */
   left: 63px;
   bottom: 0;
@@ -58,7 +59,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
+  align-items: center;
+  width: 100%;
   gap: 27px;
   background-color: #fff;
   padding-left: 50px;
@@ -99,8 +101,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 993px;
-    margin: 0;
+    height: 350px;
+    margin-bottom: 150px;
     /* outline: 1px solid red; */
   }
 
