--- a/src/Components/ui/HomePage/Container4/Container4.module.css
+++ b/src/Components/ui/HomePage/Container4/Container4.module.css
@@ -1,5 +1,22 @@
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  /* padding-left: 25px;
+  padding-right: 25px; */
+  gap: 10px;
+}
+
+.banner3 {
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.containerBlock {
+  display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -91,6 +108,12 @@
 
 @media (max-width: 768px) {
   .container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .containerBlock {
     display: flex;
     flex-direction: column;
     width: 100%;
