--- a/src/Components/ui/CentrTehPage/Container6/Container6.module.css
+++ b/src/Components/ui/CentrTehPage/Container6/Container6.module.css
@@ -35,8 +35,11 @@
 
 .containerRight span {
   display: flex;
+  align-items: center;
   gap: 15px;
 }
+
+
 
 .containerRight span:nth-of-type(1) {
 }
