--- a/src/Components/ui/CentrTehPage/Container4/Container4.module.css
+++ b/src/Components/ui/CentrTehPage/Container4/Container4.module.css
@@ -33,16 +33,30 @@
   height: 100%;
 }
 
-.containerCard span {
+.containerCard span:nth-of-type(1) {
   display: flex;
   position: absolute;
   z-index: 1;
   color: #fff;
-  bottom: 53px;
+  bottom: 103px;
   left: 36px;
   font-size: 32px;
   font-weight: 700;
   padding-right: 70px;
+}
+
+.containerCard span:nth-of-type(2) a {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  color: #fff;
+  bottom: 33px;
+  left: 36px;
+  font-size: 22px;
+  font-weight: 400;
+  background-color: #f15043;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
 
 @media (max-width: 768px) {
