--- a/src/Components/ui/CentrEkspPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrEkspPage/Container1/Container1.module.css
@@ -77,12 +77,14 @@
   font-size: 30px;
   font-weight: 700;
   color: black;
+  text-align: center;
 }
 
 .containerRight span:nth-of-type(2) {
   max-width: 590px;
   font-size: 16px;
   font-weight: 500;
+  text-align: center;
 }
 
 .containerRight button {
