--- a/src/Components/ui/CentrEkspPage/Container4/Container4.module.css
+++ b/src/Components/ui/CentrEkspPage/Container4/Container4.module.css
@@ -16,10 +16,19 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   width: 100%;
   flex-wrap: wrap;
   gap: 39px;
   /* outline: 1px solid red; */
+}
+
+.cards {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  gap: 39px;
 }
 
 .containerCard {
@@ -59,6 +68,10 @@
   transition: all ease-out 0.4s;
 }
 
+.containerCard:hover span:first-of-type {
+  color: #fff;
+}
+
 .containerCard:hover img:nth-of-type(3) {
   left: 0px;
 }
@@ -82,6 +95,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis; /* Показывать троеточие */
+  transition: all 0.3s ease-in-out;
   /* outline: 1px solid red; */
 }
 
@@ -93,7 +107,7 @@
   height: 64px;
   margin-right: 35px;
   border-radius: 50px;
-  border: 2px solid #562211;
+  /* border: 2px solid #562211; */
 
   /* outline: 1px solid red; */
 }
@@ -120,7 +134,6 @@
     margin-top: 60px;
     color: #fff;
     border-radius: 30px;
-    
   }
 
   .container {
