--- a/src/Components/ui/CentrInnovPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrInnovPage/Container1/Container1.module.css
@@ -78,12 +78,14 @@
   font-size: 28px;
   font-weight: 700;
   color: black;
+  text-align: center;
 }
 
 .containerRight span:nth-of-type(2) {
   max-width: 500px;
   font-size: 15px;
   font-weight: 500;
+  text-align: center;
 }
 
 .containerRight button {
