--- a/src/Components/ui/CentrPredPage/Container1/Container1.module.css
+++ b/src/Components/ui/CentrPredPage/Container1/Container1.module.css
@@ -76,12 +76,14 @@
   font-size: 30px;
   font-weight: 700;
   color: black;
+  text-align: center;
 }
 
 .containerRight span:nth-of-type(2) {
   width: 590px;
   font-size: 16px;
   font-weight: 500;
+  text-align: center;
 }
 
 .containerRight button {
