--- a/src/Components/ui/HomePage/Container3/Container3.module.css
+++ b/src/Components/ui/HomePage/Container3/Container3.module.css
@@ -55,7 +55,7 @@
   z-index: 1;
   height: 348px;
   bottom: 0;
-  right: 25px;
+  left: 0;
 }
 
 .containerEl:nth-of-type(4) img:nth-of-type(2) {
@@ -74,7 +74,7 @@
   text-align: left;
   left: 0;
   top: 241px;
-  width: 295px;
+  width: 305px;
   height: 60px;
   background-color: #c49369;
   color: #fff;
@@ -83,7 +83,7 @@
   font-weight: 600;
   border: none;
   padding-left: 10px;
-  padding-right: 35px;
+  padding-right: 59px;
   cursor: pointer;
   z-index: 2;
   /* Плавный переход */
