--- a/src/Components/ui/HomePage/Container4/Container4.module.css
+++ b/src/Components/ui/HomePage/Container4/Container4.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: -20px;
   /* padding-left: 25px;
   padding-right: 25px; */
   gap: 10px;
@@ -22,13 +23,15 @@
   width: 100%;
   /* padding-left: 25px;
   padding-right: 25px; */
+  margin-bottom: 30px;
   gap: 10px;
 }
 
 .one {
-  width: 48%;
+  width: 49%;
   height: 225px;
   border-radius: 20px;
+
   /* outline: 1px solid red; */
 }
 
@@ -72,6 +75,7 @@
   background-image: url(/images/banner_catalog.webp);
   background-repeat: no-repeat;
   background-size: 100%;
+  margin-bottom: 20px;
 }
 
 .containerPdf span:nth-of-type(1) {
@@ -104,6 +108,19 @@
   text-align: center;
   border-radius: 20px;
   cursor: pointer;
+}
+
+.container3 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 30px;
+  margin-top: 30px;
+}
+
+.container3 img {
+  width: 100%;
+  border-radius: 20px;
 }
 
 @media (max-width: 768px) {
@@ -152,8 +169,13 @@
   .container2 {
     width: 100%;
     padding: 10px;
+    margin-top: -40px;
     /* padding: 0 25px; */
   }
+
+    .container3 {
+      gap: 20px;
+    }
 
   .containerPdf {
     padding: 20px;
