--- a/src/Components/ui/SupportPage/All/SupportPageAll.module.css
+++ b/src/Components/ui/SupportPage/All/SupportPageAll.module.css
@@ -73,27 +73,30 @@
   text-align: center;
   justify-content: space-between;
   width: 376px;
-  height: 460px;
+  height: 260px;
+  padding-top: 20px;
   overflow: hidden;
   border-radius: 20px;
   border: 2px solid #8692c3;
+  background-color: #8692c350;
 }
 
 .containerGroupContentCard img {
-  width: 100%;
+  /* width: 100%;
   height: 276px;
-  object-fit: cover;
+  object-fit: cover; */
+  display: none;
 }
 
 .containerGroupContentCard span:first-of-type {
   width: 80%;
-  height: 79px; /* Убедитесь, что высота позволяет видеть несколько строк */
+  /* height: 89px;  */
   font-size: 22px;
   font-weight: 600;
-  overflow: hidden; /* Скрыть переполнение */
-  display: -webkit-box; /* Используем flexbox для многострочного текста */
-  -webkit-box-orient: vertical; /* Устанавливаем ориентацию на вертикальную */
-  -webkit-line-clamp: 3; /* Ограничиваем количество видимых строк */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical; 
+  /* -webkit-line-clamp: 3; Ограничиваем количество видимых строк */
   text-overflow: ellipsis; /* Добавляем многоточие */
   /* outline: 1px solid red; */
 }
@@ -125,7 +128,7 @@
   padding: 8px 14px;
   border: 1px solid #ccc;
   background-color: white;
-    color: white;
+  color: white;
   cursor: pointer;
   border-radius: 6px;
   font-weight: 600;
