--- a/src/Components/Pages/OneNewsPage/OneNewsPage.module.css
+++ b/src/Components/Pages/OneNewsPage/OneNewsPage.module.css
@@ -19,6 +19,12 @@
   color: #ed5338;
 }
 
+.containerNav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
 .containerNav span {
   font-size: 14px;
   font-weight: 400;
@@ -29,51 +35,67 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  text-align: justify;
   width: 100%;
   margin-top: 40px;
+  gap: 18px;
   /* outline: 1px solid red; */
 }
 
-.containerNews span:first-of-type {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 50px;
+.title {
+  margin: 0;
+  max-width: 100%;
+  /* max-width: 900px; */
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 60px;
+  color: #111;
 }
+
+.breadcrumbTitle {
+  font-size: 14px;
+  font-weight: 400;
+  color: #000;
+}
+
+.date {
+  width: 100%;
+  font-size: 16px;
+  line-height: 18.88px;
+  font-weight: 500;
+  text-align: left;
+  color: #666;
+}
+
+.hero {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.heroImage {
+  width: 600px;
+  height: 400px;
+  max-width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
 
 .articleText {
-  /* padding: 90px 30px; */
-  /* font-size: 20px; */
-  /* line-height: 30px; */
-  white-space: pre-wrap;
-  /* border: 1px solid #777; */
-  /* border-radius: 20px; */
-}
-
-.containerNews p {
   width: 100%;
-  font-size: 20px;
+  margin: 10px 0 20px 0;
+  font-size: 17px;
+  line-height: 30px;
+  color: #333;
+  white-space: normal;
 }
 
-.containerNews img {
-  margin-top: 50px;
-  border-radius: 10px;
-  width: 300px;
-}
-
-.articleText p {
+/* .articleText p {
   margin: 1em 0;
   line-height: 1.6;
-}
+} */
 
-.articleText h1, .articleText h2 {
+/* .articleText h1, .articleText h2 {
   margin-top: 1.5em;
   margin-bottom: 0.5em;
 }
@@ -81,19 +103,9 @@
 .articleText ul {
   margin-left: 1.5em;
   list-style-type: disc;
-}
+} */
 
-.articleText {
-  font-size: 18px;
-  line-height: 1.7;
-  color: #333;
-}
-
-.articleText p {
-  margin: 1em 0;
-}
-
-.articleText h1, .articleText h2, .articleText h3 {
+/* .articleText h1, .articleText h2, .articleText h3 {
   font-weight: bold;
   margin: 1.2em 0 0.6em;
   line-height: 1.3;
@@ -113,17 +125,79 @@
 
 .articleText li {
   margin-bottom: 0.5em;
-}
+} */
 
 .articleText a {
-  color: #ed5338;
+  color: #ed5338 !important;
+  font-size: 17px !important;
   text-decoration: underline;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
-.articleText img {
+/* .articleText img {
   max-width: 100%;
   margin: 1.5em 0;
   border-radius: 8px;
+  display: block;
+  cursor: pointer;
+} */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.galleryItem {
+  flex: 0 0 30%;
+  max-width: 30%;
+}
+
+.galleryItem img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.clickableImage {
+  cursor: pointer;
+}
+
+.modalOverlay {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 20px;
+}
+
+.modalContent {
+  position: relative;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.modalImage {
+  max-width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
+  border-radius: 12px;
+}
+
+.modalClose {
+  position: absolute;
+  top: -80px;
+  right: -40px;
+  border: none;
+  background: transparent;
+  color: #f1f1f1;
+  font-size: 40px;
+  cursor: pointer;
 }
 
 
@@ -154,44 +228,57 @@
   }
 
   .containerNav span {
-    font-size: 14px;
-    font-weight: 400;
-    color: black;
+    font-size: 12px;
   }
 
   .containerNews {
     display: flex;
     position: relative;
     flex-direction: column;
-    text-align: justify;
     width: 100%;
     margin-top: 20px;
+    gap: 14px;
     /* outline: 1px solid red; */
   }
 
-  .containerNews span:first-of-type {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 30px;
+  .title {
+    font-size: 18px;
+    line-height: 26px;
   }
 
-  .containerNews p {
+  .heroImage {
     width: 100%;
-    font-size: 14px;
-    
+    height: 350px;
   }
 
-  .containerNews img {
-    margin-top: 40px;
-    /* margin-bottom: 20px; */
-    border-radius: 10px;
+  .articleText {
     width: 100%;
+    margin: 10px 0 20px 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .gallery {
+    gap: 20px;
+  }
+
+  .galleryItem {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .galleryItem img {
+    height: 250px;
+  }
+
+  .modalContent {
+    max-width: 95%;
+    max-height: 85%;
+  }
+
+  .modalClose {
+    top: -10px;
+    right: -24px;
+    font-size: 34px;
   }
 }
