--- a/src/Components/ui/CentrInnovPage/Container8/Container8.module.css
+++ b/src/Components/ui/CentrInnovPage/Container8/Container8.module.css
@@ -92,18 +92,23 @@
   align-items: center;
   gap: 10px;
   padding: 10px 14px;
-  border: 2px solid #ed5338;
-  border-radius: 12px;
+  border: 1px solid #ED5338;
+  border-radius: 20px;
   width: fit-content;
 }
 
 .phoneIcon {
-  font-size: 18px;
+  /* font-size: 18px; */
+  width: 13px;
+}
+
+.phoneIcon img {
+  width: 100%;
 }
 
 .phone {
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   color: #000;
   text-decoration: none;
 }
@@ -140,8 +145,8 @@
 }
 
 .qrCode {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   object-fit: contain;
 }
 
